; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_retroarch_msg_queue_deinit.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_retroarch_msg_queue_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@runloop_msg_queue = common dso_local global i32* null, align 8
@_runloop_msg_queue_lock = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @retroarch_msg_queue_deinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @retroarch_msg_queue_deinit() #0 {
  %1 = call i32 (...) @runloop_msg_queue_lock()
  %2 = load i32*, i32** @runloop_msg_queue, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %9

5:                                                ; preds = %0
  %6 = load i32*, i32** @runloop_msg_queue, align 8
  %7 = call i32 @msg_queue_free(i32* %6)
  %8 = call i32 (...) @runloop_msg_queue_unlock()
  store i32* null, i32** @runloop_msg_queue, align 8
  br label %9

9:                                                ; preds = %5, %4
  ret void
}

declare dso_local i32 @runloop_msg_queue_lock(...) #1

declare dso_local i32 @msg_queue_free(i32*) #1

declare dso_local i32 @runloop_msg_queue_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
